test/errors/uint_bits_too_wide.haste
const a: uint256 = 1;
